Fix summary stats list alignment on mobile

--- a/src/app/containers/results/summary-report/summary-report.component.scss
+++ b/src/app/containers/results/summary-report/summary-report.component.scss
@@ -237,6 +237,11 @@
       }
     }
 
+    ::ng-deep .summary-stats {
+      margin-left: 0 !important;
+      padding-left: 0 !important;
+    }
+
     table {
       width: 100%;
       font-size: 12px;
